grammar.txt
program ::= function+

function ::= 'function' <id> '(' params? ')' ':' typeid block

params ::= <id> ':' typeid (',' params)*

expr ::= block | assign

block ::= '{' exprs? '}'

exprs ::= expr (';' exprs)*

typeid ::= <id> | <id> '[' ']'

assign ::=
      lvalue ('=' assign)?
    | cond

cond ::= addsub (('<'|'>'|'=='|'!='|'<='|'>=') addsub)*

addsub ::= muldiv (('+'|'-') muldiv)*

muldiv ::= primary (('*'|'/') primary)*

primary ::=
      '-' primary
    | '!' primary
    | '(' expr ')'
    | def
    | if_else
    | while
    | fcall
    | literal
    | lvalue

def ::= 'let' <id> (':' typeid)? '=' expr

if_else ::= 'if' expr block ('else' else_tail)?

else_tail ::=
      if_else
    | block

while ::= 'while' expr block

fcall ::= <id> '(' args? ')'

args ::= expr (',' expr)*

literal ::=
      <integer>
    | <float_number>
    | 'true'
    | 'false'
    | 'null'
    | '[' literal (',' literal)* ']'

lvalue ::= <id> '[' expr ']' | <id>
